adjusted win rates

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -530,8 +530,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# characters with the highest win rate \n",
-    "top_winrate = np.array(['Omniknight', 'Abaddon', 'Visage', 'Zeus', 'Spectre', 'Necrophos'])\n",
+    "# characters with the all-time highest win rate (accurate until the 16th of September)\n",
+    "top_winrate = np.array(['Omniknight', 'Abaddon', 'Warlock', 'Zeus', 'Spectre', 'Warlock'])\n",
     "\n",
     "# create new feature: how many from the characters from the top win rate\n",
     "top_wins_df = features_df.where(~features_df.isin(top_winrate), None)\n",
@@ -566,22 +566,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# find recall - TPR for betting purposes "
+    "# find acc/recall - TPR for betting purposes "
    ]
   }
  ],
