--- a/dota_classification_models.ipynb
+++ b/dota_classification_models.ipynb
@@ -2,33 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib as plt\n",
     "%matplotlib inline\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "from sklearn.metrics import precision_score, recall_score, accuracy_score, f1_score\n",
+    "from sklearn.metrics import recall_score, accuracy_score\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall Score: 52.18\n",
+      "Accuracy Score: 51.79\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
@@ -80,7 +80,7 @@
     "test_predict = knn.predict(x_test)\n",
     "\n",
     "\n",
-    "recall, acc = print_metrics(y_test, test_predict)"
+    "recall, acc = print_metrics(y_test, test_predict, print_score=True)"
    ]
   },
   {
@@ -119,7 +119,7 @@
     "    return best_acc, best_k, scores\n",
     "\n",
     "\n",
-    "acc, k, scores = multiple_knn(df, labels, ks=[8, 9])"
+    "acc, k, scores = multiple_knn(df, labels, ks=[4, 7, 8, 9, 10])"
    ]
   },
   {
@@ -268,28 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\sklearn\\preprocessing\\label.py:219: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\sklearn\\preprocessing\\label.py:252: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Accuracy: 59.43%\n",
-      "Validation accuracy: 57.17%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xgboost as xgb\n",
     "\n",
@@ -311,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,22 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grid Search found the following optimal parameters: \n",
-      "learning_rate: 0.4\n",
-      "max_depth: 5\n",
-      "min_child_weight: 7\n",
-      "n_estimators: 100\n",
-      "subsample: 0.7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# xg_grid = GridSearchCV(xgbooster, xg_param_grid, scoring='accuracy', cv=3, n_jobs=1)\n",
     "# xg_grid.fit(df, labels)\n",
@@ -357,20 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6593333333333333"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "val_accuracy"
    ]
