--- a/dota_classification_models.ipynb
+++ b/dota_classification_models.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,24 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recall Score: 52.4\n",
-      "Accuracy Score: 51.47\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "# run initial model with default value (k=5)\n",
     "x_train, x_test, y_train, y_test = train_test_split(df, labels, test_size=0.3)\n",
-    "knn = KNeighborsClassifier()\n",
+    "knn = KNeighborsClassifier(verbose=1)\n",
     "knn.fit(x_train, y_train.values.ravel())\n",
     "test_predict = knn.predict(x_test)\n",
     "\n",
