--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -526,21 +526,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\numpy\\lib\\arraysetops.py:522: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  mask |= (ar1 == a)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# characters with the all-time highest win rate (accurate until the 16th of September)\n",
-    "top_winrate = np.array(['Omniknight', 'Abaddon', 'Warlock', 'Zeus', 'Spectre', 'Necrophos'])\n",
+    "top_winrate = np.array(['Omniknight', 'Abaddon', 'Warlock', 'Zeus', 'Spectre', 'Necrophos', 'Visage'])\n",
     "\n",
     "# create new feature: how many from the characters from the top win rate\n",
     "top_wins_df = features_df.where(~features_df.isin(top_winrate), None)\n",
@@ -550,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
