adjusted win rates and models

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -376,7 +376,7 @@
    "outputs": [],
    "source": [
     "# tier  list\n",
-    "tier1 = np.array(['Alchemist', 'Batrider', 'Lifestealer', 'Visage',\n",
+    "tier1 = np.array(['Alchemist', 'Enchan', 'Lifestealer', 'Visage',\n",
     "                 'Wisp', 'Outerworld Devourer', 'Weaver',\n",
     "                 \"Nature's Prophet\", 'Rubick'])\n",
     "\n",
@@ -526,12 +526,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# characters with the all-time highest win rate (accurate until the 16th of September)\n",
-    "top_winrate = np.array(['Omniknight', 'Abaddon', 'Warlock', 'Zeus', 'Spectre', 'Necrophos', 'Visage'])\n",
+    "# characters with the all-time highest win rate (accurate to the 16th of September 2019)\n",
+    "top_winrate = np.array(['Omniknight', 'Abaddon', 'Warlock', 'Zeus', 'Spectre', 'Necrophos'])\n",
     "\n",
     "# create new feature: how many from the characters from the top win rate\n",
     "top_wins_df = features_df.where(~features_df.isin(top_winrate), None)\n",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
