created a new file with just the dummies

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -332,7 +332,9 @@
     "        all_dummies.append(uniques_dic)       \n",
     "    return pd.DataFrame(all_dummies, columns=uniques)\n",
     "\n",
-    "dummies_df = populate_df(features_df)"
+    "dummies_df = populate_df(features_df)\n",
+    "dummies_csv = dummies_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_dummies.csv', \n",
+    "                                 index = None, header=True)"
    ]
   },
   {
@@ -551,7 +553,8 @@
     "                         carry_df, support_df, offlane_df, mid_df, roam_df,\n",
     "                         nuke_disable_df, top_wins_df, lineups['Won']], axis=1)\n",
     "features_df.head()\n",
-    "export_csv = features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', index = None, header=True) #Don't forget to add '.csv' at the end of the path"
+    "export_csv = features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
+    "                                 index = None, header=True) "
    ]
   },
   {
