added features based on past patches

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -205,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1fcc784c7b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2c63d9af4a8>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,18 +543,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2018 most used characters - patch 7.19\n",
+    "picked_719 = np.array(['Mirana', 'Earthshaker', 'Tiny', 'Necrophos', 'Weaver',\n",
+    "                        'Winter Wyvern', 'Phoenix', 'Lina', 'Bane', 'Phantom Lancer'])\n",
+    "\n",
+    "# create new feature: how many from the characters from the top win rate\n",
+    "picked_719_df = features_df.where(~features_df.isin(picked_719), None)\n",
+    "picked_719_df = pd.DataFrame(picked_719_df.isnull().sum(axis=1), columns=['Picked720'])\n",
+    "# picked_719_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2018 most used characters - patch 7.20\n",
+    "picked_720 = np.array(['Rubick', 'Lich', 'Phantom Assassin', 'Brewmaster', 'Centaur Warrunner',\n",
+    "                        'Dazzle', 'Sand King', 'Tusk', 'Terrorblade'])\n",
+    "\n",
+    "# create new feature: how many from the characters from the top win rate\n",
+    "picked_720_df = features_df.where(~features_df.isin(picked_720), None)\n",
+    "picked_720_df = pd.DataFrame(picked_720_df.isnull().sum(axis=1), columns=['Picked720'])\n",
+    "# picked_720_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Riki</th>\n",
+       "      <th>Razor</th>\n",
+       "      <th>Morphling</th>\n",
+       "      <th>Brewmaster</th>\n",
+       "      <th>Slardar</th>\n",
+       "      <th>Wisp</th>\n",
+       "      <th>Omniknight</th>\n",
+       "      <th>Slark</th>\n",
+       "      <th>Ogre Magi</th>\n",
+       "      <th>Chaos Knight</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Carries</th>\n",
+       "      <th>Support</th>\n",
+       "      <th>Offlane</th>\n",
+       "      <th>Mid</th>\n",
+       "      <th>Roamer</th>\n",
+       "      <th>Nuke/Disable</th>\n",
+       "      <th>Top5_winrate</th>\n",
+       "      <th>Picked720</th>\n",
+       "      <th>Picked720</th>\n",
+       "      <th>Won</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 110 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Riki  Razor  Morphling  Brewmaster  Slardar  Wisp  Omniknight  Slark  \\\n",
+       "0   1.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "1   1.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "2   0.0    1.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "3   0.0    1.0        1.0         0.0      0.0   0.0         1.0    0.0   \n",
+       "4   1.0    0.0        0.0         1.0      0.0   0.0         0.0    0.0   \n",
+       "\n",
+       "   Ogre Magi  Chaos Knight ...   Carries  Support  Offlane  Mid  Roamer  \\\n",
+       "0        0.0           0.0 ...         0        1        2    3       1   \n",
+       "1        0.0           0.0 ...         0        1        2    2       1   \n",
+       "2        0.0           0.0 ...         2        0        0    2       0   \n",
+       "3        0.0           0.0 ...         1        2        0    1       1   \n",
+       "4        1.0           0.0 ...         1        1        1    1       1   \n",
+       "\n",
+       "   Nuke/Disable  Top5_winrate  Picked720  Picked720  Won  \n",
+       "0             4             0          0          0    1  \n",
+       "1             1             0          1          0    1  \n",
+       "2             2             1          0          0    1  \n",
+       "3             2             1          0          0    1  \n",
+       "4             2             0          1          0    1  \n",
+       "\n",
+       "[5 rows x 110 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "features_df = pd.concat([dummies_df, melee_df, op_tiers12_df, op_tiers3_df,\n",
     "                         carry_df, support_df, offlane_df, mid_df, roam_df,\n",
-    "                         nuke_disable_df, top_wins_df, lineups['Won']], axis=1)\n",
-    "features_df.head()\n",
+    "                         nuke_disable_df, top_wins_df, picked_720_df, \n",
+    "                         picked_719_df, lineups['Won']], axis=1)\n",
+    "\n",
     "export_csv = features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
-    "                                 index = None, header=True) "
+    "                                 index = None, header=True)\n",
+    "features_df.head()"
    ]
   },
   {
