added features based on past patches

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -211,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2c63d9af4a8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2620a07d7b8>"
       ]
      },
      "execution_count": 4,
@@ -553,7 +553,7 @@
     "\n",
     "# create new feature: how many from the characters from the top win rate\n",
     "picked_719_df = features_df.where(~features_df.isin(picked_719), None)\n",
-    "picked_719_df = pd.DataFrame(picked_719_df.isnull().sum(axis=1), columns=['Picked720'])\n",
+    "picked_719_df = pd.DataFrame(picked_719_df.isnull().sum(axis=1), columns=['Picked719'])\n",
     "# picked_719_df.head()"
    ]
   },
@@ -620,7 +620,7 @@
        "      <th>Nuke/Disable</th>\n",
        "      <th>Top5_winrate</th>\n",
        "      <th>Picked720</th>\n",
-       "      <th>Picked720</th>\n",
+       "      <th>Picked719</th>\n",
        "      <th>Won</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -765,7 +765,7 @@
        "3        0.0           0.0 ...         1        2        0    1       1   \n",
        "4        1.0           0.0 ...         1        1        1    1       1   \n",
        "\n",
-       "   Nuke/Disable  Top5_winrate  Picked720  Picked720  Won  \n",
+       "   Nuke/Disable  Top5_winrate  Picked720  Picked719  Won  \n",
        "0             4             0          0          0    1  \n",
        "1             1             0          1          0    1  \n",
        "2             2             1          0          0    1  \n",
