added more features based on main attributes

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
     "    return pd.DataFrame(all_dummies, columns=uniques)\n",
     "\n",
     "dummies_df = populate_df(features_df)\n",
-    "dummies_df = pd.concat([dummies_df, df.Won], axis=1)\n",
+    "dummies_df = pd.concat([dummies_df, lineups.Won], axis=1)\n",
     "dummies_csv = dummies_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_dummies.csv', \n",
     "                                 index = None, header=True)"
    ]
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -696,8 +696,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>29995</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29996</th>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -708,20 +732,20 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
+       "      <th>29997</th>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -732,21 +756,45 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>29998</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29999</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -757,63 +805,15 @@
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -821,31 +821,31 @@
        "</div>"
       ],
       "text/plain": [
-       "   Riki  Razor  Morphling  Brewmaster  Slardar  Wisp  Omniknight  Slark  \\\n",
-       "0   1.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
-       "1   1.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
-       "2   0.0    1.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
-       "3   0.0    1.0        1.0         0.0      0.0   0.0         1.0    0.0   \n",
-       "4   1.0    0.0        0.0         1.0      0.0   0.0         0.0    0.0   \n",
+       "       Riki  Razor  Morphling  Brewmaster  Slardar  Wisp  Omniknight  Slark  \\\n",
+       "29995   0.0    0.0        1.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "29996   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "29997   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "29998   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "29999   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
        "\n",
-       "   Ogre Magi  Chaos Knight ...   Carries  Support  Offlane  Mid  Roamer  \\\n",
-       "0        0.0           0.0 ...         0        1        2    3       1   \n",
-       "1        0.0           0.0 ...         0        1        2    2       1   \n",
-       "2        0.0           0.0 ...         2        0        0    2       0   \n",
-       "3        0.0           0.0 ...         1        2        0    1       1   \n",
-       "4        1.0           0.0 ...         1        1        1    1       1   \n",
+       "       Ogre Magi  Chaos Knight ...   Carries  Support  Offlane  Mid  Roamer  \\\n",
+       "29995        0.0           0.0 ...         2        1        1    1       2   \n",
+       "29996        0.0           0.0 ...         1        1        1    2       3   \n",
+       "29997        0.0           0.0 ...         1        3        0    2       0   \n",
+       "29998        0.0           0.0 ...         1        2        2    1       1   \n",
+       "29999        0.0           0.0 ...         2        1        0    2       1   \n",
        "\n",
-       "   Nuke/Disable  Top5_winrate  Picked719  Picked720  Won  \n",
-       "0             4             0          0          0    1  \n",
-       "1             1             0          0          1    1  \n",
-       "2             2             1          0          0    1  \n",
-       "3             2             1          0          0    1  \n",
-       "4             2             0          0          1    1  \n",
+       "       Nuke/Disable  Top5_winrate  Picked719  Picked720  Won  \n",
+       "29995             1             0          0          0    0  \n",
+       "29996             1             0          2          0    0  \n",
+       "29997             2             0          0          0    0  \n",
+       "29998             2             0          0          0    0  \n",
+       "29999             1             0          0          0    0  \n",
        "\n",
        "[5 rows x 114 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,9 +857,9 @@
     "                         top_wins_df, picked_719_df, picked_720_df, \n",
     "                         lineups['Won']], axis=1)\n",
     "\n",
-    "export_csv = features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
-    "                                 index = None, header=True)\n",
-    "features_df.head()"
+    "# export_csv = features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
+    "#                                  index = None, header=True)\n",
+    "features_df.tail()"
    ]
   },
   {
