--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -838,20 +838,20 @@
        "[5 rows x 114 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "features_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
-    "                         op_tiers12_df, op_tiers3_df, carry_df, support_df, \n",
-    "                         offlane_df, mid_df, roam_df, nuke_disable_df, \n",
-    "                         top_wins_df, picked_719_df, picked_720_df, \n",
-    "                         lineups['Won']], axis=1)\n",
+    "# features_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
+    "#                          op_tiers12_df, op_tiers3_df, carry_df, support_df, \n",
+    "#                          offlane_df, mid_df, roam_df, nuke_disable_df, \n",
+    "#                          top_wins_df, picked_719_df, picked_720_df, \n",
+    "#                          lineups['Won']], axis=1)\n",
     "\n",
-    "# export_csv = features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
-    "#                                  index = None, header=True)\n",
+    "export_csv = features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
+    "                                 index = None, header=True)\n",
     "features_df.tail()"
    ]
   },
