--- a/dota_classification_models.ipynb
+++ b/dota_classification_models.ipynb
@@ -25,6 +25,7 @@
    "source": [
     "# open the pre-processed csv file and split the target variable from the classifiers\n",
     "df = pd.read_csv('dota2_cleaned.csv')\n",
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
     "labels = df[['Won']]\n",
     "df.drop(['Won'], axis=1, inplace=True)"
    ]
